disp. buffer update

--- a/dispersionBufferExtraction.html
+++ b/dispersionBufferExtraction.html
@@ -268,7 +268,7 @@ div.tocify {
 
 <h1 class="title toc-ignore"><em>Montastraea cavernosa</em> DNA extraction with dispersion buffer</h1>
 <h4 class="author">Alexis Sturm – <a href="mailto:lexie.sturm@gmail.com">lexie.sturm@gmail.com</a></h4>
-<h4 class="date">4/10/2020</h4>
+<h4 class="date">4/16/2020</h4>
 
 </div>
 
@@ -402,9 +402,15 @@ Total
 <li><p>Set NFW for elution step in heat block at 65° C</p></li>
 <li><p>Add to your eluted DNA a 2:1 volume of Binding Buffer:DNA (in this case 200µL) and vortex thoroughly, spin down.</p></li>
 <li><p>Transfer the entire mixture (~300 uL) to a provided Zymo-Spin Column in a collection tube.</p></li>
-<li><p>Centrifuge 16,000 x g for 2 minutes at room temperature. Discard flow through. -Check to make sure all of the solution has passed through the filter, if not then spin the filter column again. Issues with getting binding buffer to pass through the filter suggests that there may be too much DNA for the filter and it is getting clogged. If this is happening for a lot of your samples, consider scraping less tissue in the beginning of the protocol, or consider switching to a larger filter column set-up, which Zymo has available.</p></li>
+<li>Centrifuge 16,000 x g for 2 minutes at room temperature. Discard flow through.
+<ul>
+<li>Check to make sure all of the solution has passed through the filter, if not then spin the filter column again. Issues with getting binding buffer to pass through the filter suggests that there may be too much DNA for the filter and it is getting clogged. If this is happening for a lot of your samples, consider scraping less tissue in the beginning of the protocol, or consider switching to a larger filter column set-up, which Zymo has available.<br /> <br /></li>
+</ul></li>
 <li><p>Add 200 μL DNA Wash Buffer to the column. Centrifuge at 16,000 x g for 1 min at room temperature. Repeat.</p></li>
-<li><p>Transfer the column to a new labeled 1.5 mL tube. Elute by adding 15-20 µL of heated NFW directly to the column matrix and incubate at room temperature for 3–5 min. Centrifuge for 2 min to elute DNA. -Ensure the DNA has completely eluted before discarding the column, if there is too much DNA you may have to spin the column twice to ensure you have all of the sample.</p></li>
+<li>Transfer the column to a new labeled 1.5 mL tube. Elute by adding 15-20 µL of heated NFW directly to the column matrix and incubate at room temperature for 3–5 min. Centrifuge for 2 min to elute DNA.
+<ul>
+<li>Ensure the DNA has completely eluted before discarding the column, if there is too much DNA you may have to spin the column twice to ensure you have all of the sample.<br /> <br /></li>
+</ul></li>
 <li><p>Nanodrop cleaned DNA, if 260/280 values are &lt;1.8 and 260/230 values are &lt;~2.0 then re-clean and elute in a smaller volume (~8 uL).</p></li>
 <li><p>Quantify via picogreen or Qubit</p></li>
 </ol>
